Solved minor issues and adjusted models field types
